[project]
name = "langgraph_simple_project"
version = "0.1"
description = ""
authors = [
    {name = "shengjie",email = "897976909@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"